test/expected/set_explicit-int.out
cdecl> set explicit-int
           ^
5: error: set option "explicit-int" requires =<value>
